@@ -4,6 +4,7 @@ import imbuy.backend.domain.Category;
 import imbuy.backend.dto.CategoryDto;
 import imbuy.backend.dto.CategoryTreeDto;
 import imbuy.backend.dto.PageResponse;
+import imbuy.backend.mapper.CategoryMapper;
 import imbuy.backend.repository.CategoryRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -13,60 +14,60 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class CategoryService {
 
     private final CategoryRepository categoryRepository;
+    private final CategoryMapper categoryMapper;
 
     public CategoryTreeDto getCategoryTree() {
         List<Category> rootCategories = categoryRepository.findRootCategoriesWithChildren();
-        CategoryTreeDto treeDto = new CategoryTreeDto();
-        treeDto.setCategories(rootCategories.stream()
-                .map(this::mapToDtoWithChildren)
-                .collect(Collectors.toList()));
-        return treeDto;
+        return new CategoryTreeDto(
+                rootCategories.stream()
+                        .map(categoryMapper::toDtoWithChildren)
+                        .toList()
+        );
     }
 
     public PageResponse<CategoryDto> getAllCategories(Pageable pageable) {
         Page<Category> categories = categoryRepository.findAll(pageable);
-        return PageResponse.of(categories.map(this::mapToDto));
+        return PageResponse.of(categories.map(categoryMapper::mapToDto));
     }
 
     public CategoryDto getCategoryById(Long id) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Category not found"));
-        return mapToDto(category);
+        return categoryMapper.mapToDto(category);
     }
 
     public CategoryDto createCategory(CategoryDto categoryDto) {
-        if (categoryRepository.existsByNameAndParentId(categoryDto.getName(), categoryDto.getParentId())) {
+        if (categoryRepository.existsByNameAndParentId(categoryDto.name(), categoryDto.parentId())) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Category with this name already exists");
         }
 
         Category category = new Category();
-        category.setName(categoryDto.getName());
+        category.setName(categoryDto.name());
 
-        if (categoryDto.getParentId() != null) {
-            Category parent = categoryRepository.findById(categoryDto.getParentId())
+        if (categoryDto.parentId() != null) {
+            Category parent = categoryRepository.findById(categoryDto.parentId())
                     .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Parent category not found"));
             category.setParent(parent);
         }
 
         category = categoryRepository.save(category);
-        return mapToDto(category);
+        return categoryMapper.mapToDto(category);
     }
 
     public CategoryDto updateCategory(Long id, CategoryDto categoryDto) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Category not found"));
 
-        category.setName(categoryDto.getName());
+        category.setName(categoryDto.name());
 
-        if (categoryDto.getParentId() != null) {
-            Category parent = categoryRepository.findById(categoryDto.getParentId())
+        if (categoryDto.parentId() != null) {
+            Category parent = categoryRepository.findById(categoryDto.parentId())
                     .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Parent category not found"));
             category.setParent(parent);
         } else {
@@ -74,8 +75,9 @@ public class CategoryService {
         }
 
         category = categoryRepository.save(category);
-        return mapToDto(category);
+        return categoryMapper.mapToDto(category);
     }
+
 
     public void deleteCategory(Long id) {
         Category category = categoryRepository.findById(id)
@@ -90,24 +92,5 @@ public class CategoryService {
         }
 
         categoryRepository.delete(category);
-    }
-
-    private CategoryDto mapToDto(Category category) {
-        CategoryDto dto = new CategoryDto();
-        dto.setId(category.getId());
-        dto.setName(category.getName());
-        if (category.getParent() != null) {
-            dto.setParentId(category.getParent().getId());
-            dto.setParentName(category.getParent().getName());
-        }
-        return dto;
-    }
-
-    private CategoryDto mapToDtoWithChildren(Category category) {
-        CategoryDto dto = mapToDto(category);
-        dto.setChildren(category.getChildren().stream()
-                .map(this::mapToDtoWithChildren)
-                .collect(Collectors.toList()));
-        return dto;
     }
 }
